Update 'ly6st4zvy-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:56ec831b3a7215afef18442d20027b73c937cb29@sha256:c268dd18a9c85b9582134adf36a7cd348aaaab5559aaa98ff6938fb2263e7718

--- a/components/ly6st4zvy-go/overlays/development/deployment-patch.yaml
+++ b/components/ly6st4zvy-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ly6st4zvy-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:56ec831b3a7215afef18442d20027b73c937cb29@sha256:c268dd18a9c85b9582134adf36a7cd348aaaab5559aaa98ff6938fb2263e7718
+          name: container-image
